--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app_content {
+  width: 55%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 1240px) and (min-width: 1024px) {
+  .app_content {
+    width: 60% !important;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media only screen and (max-width: 1239px) and (min-width: 800px) {
+  .app_content {
+    width: 65% !important;
+  }
+}
+
+@media only screen and (max-width: 799px) and (min-width: 500px) {
+  .app_content {
+    width: 65% !important;
+  }
+}
+
+@media only screen and (max-width: 499px) and (min-width: 0px) {
+  .app_content {
+    width: 70% !important;
   }
 }
