--- a/src/Component/Weather.scss
+++ b/src/Component/Weather.scss
@@ -56,7 +56,7 @@
     margin: 0px !important;
     padding: 5px 5px;
     &:nth-child(1) {
-      margin-left: 50px !important;
+      // margin-left: 10px !important;
     }
   }
 
@@ -66,17 +66,88 @@
   }
 }
 
-@media only screen and (max-width: 668px) and (min-width: 593px) {
+@media only screen and (max-width: 630px) and (min-width: 593px) {
   .weather_icons {
     margin: 0px !important;
     padding: 5px 5px;
     &:nth-child(1) {
-      margin-left: 100px !important;
+      margin-left: 20px !important;
     }
   }
 }
 
-@media only screen and (max-width: 592px) and (min-width: 525px) {
+@media only screen and (max-width: 592px) and (min-width: 546px) {
+  .weather_icons {
+    margin: 0px !important;
+    padding: 5px 5px;
+    &:nth-child(1) {
+      margin-left: 50px !important;
+    }
+  }
+}
+@media only screen and (max-width: 546px) and (min-width: 499px) {
+  .weather_icons {
+    margin: 0px !important;
+    padding: 5px 5px;
+    &:nth-child(1) {
+      margin-left: 80px !important;
+    }
+  }
+}
+// @media only screen and (max-width: 499px) and (min-width: 0px) {
+//   .weather_icons {
+//     margin: 0px !important;
+//     padding: 5px 5px;
+//   }
+//   .weather {
+//     overflow-x: scroll;
+//     overflow-y: hidden;
+//   }
+// }
+
+@media only screen and (max-width: 499px) and (min-width: 462px) {
+  .weather_icons {
+    margin: 0px !important;
+    padding: 5px 5px;
+    &:nth-child(1) {
+      margin-left: 80px !important;
+    }
+  }
+  .weather {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+}
+
+@media only screen and (max-width: 461px) and (min-width: 436px) {
+  .weather_icons {
+    margin: 0px !important;
+    padding: 5px 5px;
+    &:nth-child(1) {
+      margin-left: 120px !important;
+    }
+  }
+  .weather {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+}
+
+@media only screen and (max-width: 436px) and (min-width: 390px) {
+  .weather_icons {
+    margin: 0px !important;
+    padding: 5px 5px;
+    &:nth-child(1) {
+      margin-left: 140px !important;
+    }
+  }
+  .weather {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+}
+
+@media only screen and (max-width: 389px) and (min-width: 368px) {
   .weather_icons {
     margin: 0px !important;
     padding: 5px 5px;
@@ -84,18 +155,41 @@
       margin-left: 150px !important;
     }
   }
+  .weather {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
 }
-@media only screen and (max-width: 525px) and (min-width: 499px) {
+
+@media only screen and (max-width: 367px) and (min-width: 334px) {
   .weather_icons {
     margin: 0px !important;
     padding: 5px 5px;
     &:nth-child(1) {
-      margin-left: 158px !important;
+      margin-left: 165px !important;
     }
+  }
+  .weather {
+    overflow-x: scroll;
+    overflow-y: hidden;
   }
 }
 
-@media only screen and (max-width: 499px) and (min-width: 0px) {
+@media only screen and (max-width: 333px) and (min-width: 320px) {
+  .weather_icons {
+    margin: 0px !important;
+    padding: 5px 5px;
+    &:nth-child(1) {
+      margin-left: 175px !important;
+    }
+  }
+  .weather {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+}
+
+@media only screen and (max-width: 320px) and (min-width: 0px) {
   .weather_icons {
     margin: 0px !important;
     padding: 5px 5px;
@@ -103,49 +197,8 @@
       margin-left: 200px !important;
     }
   }
-
   .weather {
     overflow-x: scroll;
     overflow-y: hidden;
-  }
-}
-
-@media only screen and (max-width: 413px) and (min-width: 390px) {
-  .weather_icons {
-    &:nth-child(1) {
-      margin-left: 220px !important;
-    }
-  }
-}
-
-@media only screen and (max-width: 389px) and (min-width: 368px) {
-  .weather_icons {
-    &:nth-child(1) {
-      margin-left: 230px !important;
-    }
-  }
-}
-
-@media only screen and (max-width: 367px) and (min-width: 334px) {
-  .weather_icons {
-    &:nth-child(1) {
-      margin-left: 250px !important;
-    }
-  }
-}
-
-@media only screen and (max-width: 333px) and (min-width: 320px) {
-  .weather_icons {
-    &:nth-child(1) {
-      margin-left: 270px !important;
-    }
-  }
-}
-
-@media only screen and (max-width: 320px) and (min-width: 0px) {
-  .weather_icons {
-    &:nth-child(1) {
-      margin-left: 300px !important;
-    }
   }
 }
